<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FragmentsExample</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	<string name="frag1_text">Fragment 1</string>
	<string name="frag2_text">Fragment 2</string>
	<string name="add">Add</string>
	<string name="remove">Remove</string>
	<string name="replace">Replace</string>
	<string name="stack">add to Back Stack</string>
	<string name="log">Log</string>
	<string name="find">Find</string>
		
</resources>
