<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mars.fragmentsexample.MainActivity"
    tools:ignore="MergeRootFrame" >

<LinearLayout
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!-- <fragment
        android:id="@+id/fragment1"
        android:name="mars.fragmentsexample.Fragment1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" 
        android:layout_weight="1"/>

    <fragment
        android:id="@+id/fragment2"
        android:name="mars.fragmentsexample.Fragment2"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" 
        android:layout_weight="1"/>  -->
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/add" >
            </Button>

            <Button
                android:id="@+id/btnRemove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/remove" >
            </Button>

            <Button
                android:id="@+id/btnReplace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/replace" >
            </Button>

            <CheckBox
                android:id="@+id/chbStack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stack" >
            </CheckBox>
            
            <Button
                android:id="@+id/btnFind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/find" >
            </Button>

        </LinearLayout>
		
        <fragment
            android:id="@+id/fragment1"
            android:name="mars.fragmentsexample.Fragment1"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            tools:layout="@layout/fragment1" >
        </fragment>
        
        <FrameLayout
            android:id="@+id/frgmCont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </FrameLayout>

</LinearLayout>

</FrameLayout>
